- Added new option to show a filter in navigation table
- Added option to hide navigation tree and use only table
- Memory optimization when reading play lists
- Option to store ratings in tags (by default will use custom metadata store)
- Save podcast information immediately after add/remove/update podcasts

aTunes 3.0.8
------------
- FIX: Control visible context panels

aTunes 3.0.7
------------
- Reduce memory consumption by interning strings read using Kryo
- All navigator views allow filtering subelements
- FIX: Disable option to create play list with top tracks when no data available
- FIX: Generate M3U files with system file separator
- FIX: Podcast information dialog broken

aTunes 3.0.6
------------
- Updated mplayer binary for Windows
- Support for playing FLV files (audio only)
- Improvements in table sort
- Added basque translation (thanks to Xabier Aramendi)
- FIX: Window size ignored if window is maximized
- FIX: Folder filter does not work with child folders
- FIX: Hide progress slider when fading away
- FIX: Validate date of tags and discard invalid ones

aTunes 3.0.5
------------
- Folder view allows filtering subfolders
- FIX: Statistics not shown in tables
- FIX: Avoid cast errors when reading preferences with kryo fails
- FIX: Error retrieving titles from CD when CD has more tracks than the album information
- FIX: Drag and drop from navigator
- FIX: Navigator not immediately updated after import
- FIX: Store repository folders as list of paths instead of file objects
- Control+F for advanced search

aTunes 3.0.4
------------
- Faster count of repository files
- FIX: Add to play list and play when user uses "Open With" option in Windows
- FIX: Error trying to remove repository folder from disk
- FIX: Error removing favorite objects from device
- FIX: Last play date loses hour and minute
- FIX: Can't add columns to search results dialog
- FIX: Search numbers in title field does not work